# Char-Coin

./: .gitignore  Anchor.toml  Cargo.toml  README.md  aUvFTHYrF4N6vpyC5DnkWNXqahcGcDknEScKeoEuANt.json  ai3YXqGx4AprHym5YRcjMBnXhnB7NuW7QnQhkQNEFi1.json  charvzwU4AjapDZc2NWgBgvAvYQmyYXFH5U7Zu8AQjh.json  keyk1FHhXGs82vJ2qecM8Rc96PXVvArVtNfoC8xEyKN.json  metadata.json  note.md  package-lock.json  package.json  tsconfig.json
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1742064846532618  MANIFEST-000021
programs/charcoin/: Cargo.toml
programs/charcoin/src/: burn.rs  donation.rs  errors.rs  governance.rs  lib.rs  marketing.rs  private_sale.rs  rewards.rs  security.rs  staking.rs
scripts/: Security.js  Treasury.js  init.ts  initialize.js  proposal_finalize.js  proposal_submit.js  stake-tokens.js  stakeTokensHandler.js  stake_init.ts  unstakeTokensHandler.js  wallet.json
tests/: Donation.js  burn.ts  charcoin.ts  claimRewardHandler.js  config.js  createSPLToken.js  dump.js  idl.json  index.js  package-lock.json  package.json  proposal_vote.js  report.md  stakingInitialize.js
