[package]
name = "charcoin"
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "charcoin"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
arrayref = "0.3.7"
borsh = "0.10.3"
borsh-derive = "0.10.3"
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"
mpl-bubblegum = "1.0.0"
mpl-token-auth-rules = "1.4.3"
mpl-token-metadata = "3.2.3"
num-derive = "0.4.0"
num-traits = "0.2.16"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.8.0"
serde = { version = "1.0.193", features = ["derive"] }
solana-program = "1.16.24"
spl-account-compression = "0.2.0"
spl-associated-token-account = "2.2.0"
spl-pod = "0.1.0"
spl-tlv-account-resolution = "0.4.0"
spl-token = "4.0.0"
spl-token-2022 = "0.9.0"
spl-token-metadata-interface = "0.2.0"
spl-transfer-hook-interface = "0.3.0"
spl-type-length-value = "0.3.0"
switchboard-solana = "0.29.79"
switchboard-v2 = "0.4.0"
thiserror = "1.0.48"
spl-memo = "3.0.0"

